--- a/html/notice.html
+++ b/html/notice.html
@@ -44,7 +44,6 @@
                         <div class="accordion-btn">
                             <p class="ico"><img src="../img/ic_index_notice.png" alt=""></p>
                             <div class="title"><p>고객센터 운영시간 단축 안내</p></div>
-                            <p class="date">2021.09.03</p>
                         </div>
                         <div class="accordion-contents">
                             <p>
@@ -70,7 +69,6 @@
                         <div class="accordion-btn">
                             <p class="ico"><img src="../img/ic_index_notice.png" alt=""></p>
                             <div class="title"><p>고객센터 운영시간 단축 안내</p></div>
-                            <p class="date">2021.09.03</p>
                         </div>
                         <div class="accordion-contents">
                             <p>
@@ -96,7 +94,6 @@
                         <div class="accordion-btn">
                             <p class="ico"><img src="../img/ic_index_notice.png" alt=""></p>
                             <div class="title"><p>고객센터 운영시간 단축 안내</p></div>
-                            <p class="date">2021.09.03</p>
                         </div>
                         <div class="accordion-contents">
                             <p>
@@ -120,9 +117,8 @@
                     </li>
                     <li class="accordion-item">
                         <div class="accordion-btn">
-                            <p class="ico">248</p>
+                        
                             <div class="title"><p>고객센터 운영시간 단축 안내</p></div>
-                            <p class="date">2021.09.03</p>
                         </div>
                         <div class="accordion-contents">
                             <p>
@@ -146,9 +142,31 @@
                     </li>
                     <li class="accordion-item">
                         <div class="accordion-btn">
-                            <p class="ico">247</p>
                             <div class="title"><p>고객센터 운영시간 단축 안내</p></div>
-                            <p class="date">2021.09.03</p>
+                        </div>
+                        <div class="accordion-contents">
+                            <p>
+                                안녕하세요. 운영팀입니다.<br />
+                                <br />
+                                항상 이용해주시는 모든 회원님들께 진심으로 감사드리며<br />
+                                <br />
+                                네트워크 내부 공사로 인해 아래의 일정으로 전화 상담 업무가 중단되오니 양해 부탁드립니다.<br />
+                                <br />
+                                - 일시 : 2021.08.27(금) 11:00~18:00(7시간)<br />
+                                <br />
+                                - 사유 : 사무실 네트워크 공사로 인한 전화 상담 중단<br />
+                                <br />
+                                해당 시간 내 전화 상담 외 1:1 상담은 정상적으로 운영될 예정이니 <br />
+                                문의사항은 1:1 상담을 통해 남겨주시면 확인 후 빠른 답변 드리도록 하겠습니다.<br />
+                                <br />
+                                <br />
+                                감사합니다. 
+                            </p>
+                        </div>
+                    </li>
+                    <li class="accordion-item">
+                        <div class="accordion-btn">
+                            <div class="title"><p>고객센터 운영시간 단축 안내</p></div>
                         </div>
                         <div class="accordion-contents">
                             <p>
@@ -171,6 +189,16 @@
                         </div>
                     </li>
                 </ul>
+            </article>
+            <article class="paging-container">
+                <div class="paging-box">
+                    <a href="#" class="prev"></a>
+                    <a href="#" class="on">1</a>
+                    <a href="#">2</a>
+                    <a href="#">3</a>
+                    <a href="#">4</a>
+                    <a href="#" class="next"></a>
+                </div>
             </article>
         </div>
         <!-- // container -->
