--- a/html/faq.html
+++ b/html/faq.html
@@ -356,7 +356,7 @@
                     </li>
                 </ul>
             </article>
-            <article class="paging-container mt-40">
+            <article class="paging-container">
                 <div class="paging-box">
                     <a href="#" class="prev"></a>
                     <a href="#" class="on">1</a>
