--- a/html/inquiry.html
+++ b/html/inquiry.html
@@ -26,7 +26,17 @@
         <!-- // subHeader -->
         <!-- container -->
         <div id="container" class="customer inquiry">
-
+            <article class="tab-menu">
+                <ul>
+                    <li><a href="./faq.html">자주하는 질문</a></li>
+                    <li><a href="./notice.html">공지사항</a></li>
+                    <li><a href="./inquiry.html" class="on">1:1문의</a></li>
+                </ul>
+            </article>
+            <article class="inquiry-contents">
+                <h3 class="title">이용하시면서 궁금하신 부분,<br />불편한 사항이 있다면 언제든지 알려주세요.</h3>
+                <a href="../html/inquiryRegist.html">1:1문의하기</a>
+            </article>
         </div>
         <!-- // container -->
         <!-- footer -->
