--- a/html/notice.html
+++ b/html/notice.html
@@ -35,11 +35,6 @@
             </article>
             <article class="notice-contents">
                 <ul class="accordion-list">
-                    <!-- <li class="accordion-item no-data">
-                        <div class="accordion-btn">
-                            <div class="title flex-c"><p>데이터가 없습니다.</p></div>
-                        </div>
-                    </li> -->
                     <li class="accordion-item noti">
                         <div class="accordion-btn">
                             <p class="ico"><img src="../img/ic_index_notice.png" alt=""></p>
@@ -186,6 +181,11 @@
                                 <br />
                                 감사합니다. 
                             </p>
+                        </div>
+                    </li>
+                    <li class="accordion-item no-data">
+                        <div class="accordion-btn">
+                            <div class="title flex-c"><p>데이터가 없습니다.</p></div>
                         </div>
                     </li>
                 </ul>
