--- a/html/inquiry.html
+++ b/html/inquiry.html
@@ -35,7 +35,136 @@
             </article>
             <article class="inquiry-contents">
                 <h3 class="title">이용하시면서 궁금하신 부분,<br />불편한 사항이 있다면 언제든지 알려주세요.</h3>
-                <a href="../html/inquiryRegist.html">1:1문의하기</a>
+                <a href="../html/inquiryRegist.html" class="request-btn">1:1문의하기</a>
+                <ul class="inquiry-list">
+                    <li class="inquiry-item no-data">
+                        <div class="inquiry-btn">
+                            <div class="title flex-c"><p>문의내역이 없습니다.</p></div>
+                        </div>
+                    </li>
+                    <li class="inquiry-item">
+                        <a href="./inquiryDetail.html">
+                            <div class="inquiry-btn">
+                                <div class="subject"><p>문의드립니다.</p></div>
+                                <div class="etc">
+                                    <p class="type">사이트/다운로드 오류</p>
+                                    <p class="date">2021.11.09</p>
+                                </div>
+                            </div>
+                            <div class="state">
+                                <span>답변<br />대기</span>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="inquiry-item">
+                        <a href="./inquiryDetail.html">
+                            <div class="inquiry-btn">
+                                <div class="subject"><p>문의가 너무 많아서 제목이 길어지는 경우 문의가 너무 많아서 제목이 길어지는 경우</p></div>
+                                <div class="etc">
+                                    <p class="type">게시물 신고</p>
+                                    <p class="date">2021.11.09</p>
+                                </div>
+                            </div>
+                            <div class="state">
+                                <span>답변<br />대기</span>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="inquiry-item">
+                        <a href="./inquiryDetail.html">
+                            <div class="inquiry-btn">
+                                <div class="subject"><p>문의드립니다.</p></div>
+                                <div class="etc">
+                                    <p class="type">사이트/다운로드 오류</p>
+                                    <p class="date">2021.11.09</p>
+                                </div>
+                            </div>
+                            <div class="state cmp">
+                                <span>답변<br />완료</span>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="inquiry-item">
+                        <a href="./inquiryDetail.html">
+                            <div class="inquiry-btn">
+                                <div class="subject"><p>문의가 너무 많아서 제목이 길어지는 경우 문의가 너무 많아서 제목이 길어지는 경우</p></div>
+                                <div class="etc">
+                                    <p class="type">게시물 신고</p>
+                                    <p class="date">2021.11.09</p>
+                                </div>
+                            </div>
+                            <div class="state cmp">
+                                <span>답변<br />완료</span>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="inquiry-item">
+                        <a href="./inquiryDetail.html">
+                            <div class="inquiry-btn">
+                                <div class="subject"><p>문의드립니다.</p></div>
+                                <div class="etc">
+                                    <p class="type">사이트/다운로드 오류</p>
+                                    <p class="date">2021.11.09</p>
+                                </div>
+                            </div>
+                            <div class="state cmp">
+                                <span>답변<br />완료</span>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="inquiry-item">
+                        <a href="./inquiryDetail.html">
+                            <div class="inquiry-btn">
+                                <div class="subject"><p>문의가 너무 많아서 제목이 길어지는 경우 문의가 너무 많아서 제목이 길어지는 경우</p></div>
+                                <div class="etc">
+                                    <p class="type">게시물 신고</p>
+                                    <p class="date">2021.11.09</p>
+                                </div>
+                            </div>
+                            <div class="state cmp">
+                                <span>답변<br />완료</span>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="inquiry-item">
+                        <a href="./inquiryDetail.html">
+                            <div class="inquiry-btn">
+                                <div class="subject"><p>문의드립니다.</p></div>
+                                <div class="etc">
+                                    <p class="type">사이트/다운로드 오류</p>
+                                    <p class="date">2021.11.09</p>
+                                </div>
+                            </div>
+                            <div class="state cmp">
+                                <span>답변<br />완료</span>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="inquiry-item">
+                        <a href="./inquiryDetail.html">
+                            <div class="inquiry-btn">
+                                <div class="subject"><p>문의가 너무 많아서 제목이 길어지는 경우 문의가 너무 많아서 제목이 길어지는 경우</p></div>
+                                <div class="etc">
+                                    <p class="type">게시물 신고</p>
+                                    <p class="date">2021.11.09</p>
+                                </div>
+                            </div>
+                            <div class="state cmp">
+                                <span>답변<br />완료</span>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </article>
+            <article class="paging-container">
+                <div class="paging-box">
+                    <a href="#" class="prev"></a>
+                    <a href="#" class="on">1</a>
+                    <a href="#">2</a>
+                    <a href="#">3</a>
+                    <a href="#">4</a>
+                    <a href="#" class="next"></a>
+                </div>
             </article>
         </div>
         <!-- // container -->
