--- a/html/inquiry.html
+++ b/html/inquiry.html
@@ -156,7 +156,7 @@
                     </li>
                 </ul>
             </article>
-            <article class="paging-container">
+            <article class="paging-container mt-25">
                 <div class="paging-box">
                     <a href="#" class="prev"></a>
                     <a href="#" class="on">1</a>
