--- a/html/inquiryDetail.html
+++ b/html/inquiryDetail.html
@@ -25,7 +25,7 @@
         </header>
         <!-- // subHeader -->
         <!-- container -->
-        <div id="container" class="customer inquiry">
+        <div id="container" class="customer inquiry no-pb">
             <article class="tab-menu">
                 <ul>
                     <li><a href="./faq.html">자주하는 질문</a></li>
