--- a/html/list.html
+++ b/html/list.html
@@ -126,12 +126,12 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#n">
+                    <a href="../html/pointShop.html">
                         포인트 충전
                     </a>
                 </li>
                 <li>
-                    <a href="#n">
+                    <a href="../html/passShop.html">
                         정액권 충전
                     </a>
                 </li>
@@ -416,7 +416,7 @@
             <a href="#n">
                 <img src="../../img/home-4-line.png" alt="">홈
             </a>
-            <a href="#n">
+            <a href="../html/pointShop.html">
                 <img src="../../img/exchange-funds-fill.png" alt="">충전샵
             </a>
             <a href="../html/event.html">
