--- a/html/passShop.html
+++ b/html/passShop.html
@@ -93,13 +93,87 @@
         <div class="side-cover"></div>
         <!-- // sideMenu -->
         <!-- container -->
-        <div id="container" class="customer shop">
+        <div id="container" class="shop">
             <article class="tab-menu">
                 <ul>
                     <li><a href="./pointShop.html">포인트 충전</a></li>
                     <li><a href="./passShop.html" class="on">정액권 충전</a></li>
                 </ul>
             </article>
+            <section class="shop-contents">
+                <article class="banner">
+                    <img src="../img/shop_banner.png" alt="">
+                </article>
+                <article class="pass-shop">
+                    <div class="shop-box">
+                        <div class="title-box">
+                            <img src="../img/s-moon.png" alt="슈퍼문 이용권" class="moon">
+                            <p>슈퍼문 이용권</p>
+                        </div>
+                        <div class="benefits">
+                            <ul>
+                                <li><img src="../img/icon-check.png" alt="">모든 디바이스 이용 가능</li>
+                                <li><img src="../img/icon-check.png" alt=""><span>무제한</span>이용</li>
+                                <li><img src="../img/icon-check.png" alt="">포인트 <span>3,000P</span> 추가지급</li>
+                            </ul>
+                        </div>
+                        <p class="price">월<strong>11,900</strong><span>원</span></p>
+                        <a href="./payment.html" class="btn">구매하기</a>
+                    </div>
+                    <div class="shop-box">
+                        <div class="title-box">
+                            <img src="../img/f-moon.png" alt="보름달 이용권" class="moon">
+                            <p>보름달 이용권</p>
+                        </div>
+                        <div class="benefits">
+                            <ul>
+                                <li><img src="../img/icon-check.png" alt="">모든 디바이스 이용 가능</li>
+                                <li><img src="../img/icon-check.png" alt=""><span>무제한</span>이용</li>
+                            </ul>
+                        </div>
+                        <p class="price">월<strong>9,900</strong><span>원</span></p>
+                        <a href="./payment.html" class="btn">구매하기</a>
+                    </div>
+                    <div class="shop-box">
+                        <div class="title-box">
+                            <img src="../img/h-moon-l.png" alt="반달(주간) 이용권" class="moon">
+                            <p>반달(주간) 이용권</p>
+                        </div>
+                        <div class="benefits">
+                            <ul>
+                                <li><img src="../img/icon-check.png" alt="">모든 디바이스 이용 가능</li>
+                                <li><img src="../img/icon-check.png" alt=""><span>무제한</span>이용 (09시 ~ 18시)</li>
+                            </ul>
+                        </div>
+                        <p class="price">월<strong>7,700</strong><span>원</span></p>
+                        <a href="./payment.html" class="btn">구매하기</a>
+                    </div>
+                    <div class="shop-box">
+                        <div class="title-box">
+                            <img src="../img/h-moon-r.png" alt="반달(야간) 이용권" class="moon">
+                            <p>반달(야간) 이용권</p>
+                        </div>
+                        <div class="benefits">
+                            <ul>
+                                <li><img src="../img/icon-check.png" alt="">모든 디바이스 이용 가능</li>
+                                <li><img src="../img/icon-check.png" alt=""><span>무제한</span>이용(01시 ~ 09시)</li>
+                            </ul>
+                        </div>
+                        <p class="price">월<strong>11,900</strong><span>원</span></p>
+                        <a href="./payment.html" class="btn">구매하기</a>
+                    </div>
+                </article>
+                <article class="shop-notice">
+                    <p>포인트 충전 유의사항</p>
+                    <ul>
+                        <li data-icon="·">제휴컨텐츠는 포인트로만 다운로드가 가능합니다.</li>
+                        <li data-icon="·">결제시 지급되는 보너스는 30일, 특별보너스는 7일간 사용가능합니다.</li>
+                        <li data-icon="·">결제시 상품권을 제외한 결제 수단의 경우 부가세 별도입니다.</li>
+                        <li data-icon="·">결제하신 포인트 상품은 이용 후 환불 및 취소가 되지 않으며 미사용 환불은 고객센터를 통해 가능합니다.</li>
+                        <li data-icon="·">정기점검, 임시점검시 서비스가 중지될 수 있습니다.</li>
+                    </ul>
+                </article>
+            </section>
         </div>
         <!-- // container -->
         <!-- footer -->
