--- a/index.html
+++ b/index.html
@@ -98,14 +98,43 @@
             <div class="close-btn">
                 <img src="img/icn_close.png" alt="">
             </div>
-            <div class="side-logo">
+            <!-- 로그인 전 -->
+            <!-- <div class="side-logo">
                 <img src="img/side_logo.png" alt="">
             </div>
             <p class="my-info-text">내정보를 보시려면 로그인을 해주세요.</p>
             <div class="btn-wrap">
                 <a href="html/login.html" class="login-btn">로그인</a>
-                <a href="#n" class="join-btn">회원가입</a>
-            </div>
+                <a href="html/join.html" class="join-btn">회원가입</a>
+            </div> -->
+            <!-- 로그인 후 -->
+            <p class="user">filedal@naver.com 님</p>
+            <ul class="user-menu">
+                <li>
+                    <p class="info">회원상태</p>
+                    <p class="data">일반회원</p>
+                </li>
+                <li>
+                    <p class="info">포인트</p>
+                    <p class="data">0P</p>
+                </li>
+                <li>
+                    <p class="info">보너스</p>
+                    <p class="data">50P</p>
+                </li>
+                <li>
+                    <p class="info">정액권</p>
+                    <p class="data">45일</p>
+                </li>
+                <li>
+                    <p class="info">쿠폰</p>
+                    <p class="data">2장</p>
+                </li>
+                <li>
+                    <p class="info">마일리지</p>
+                    <p class="data">458M</p>
+                </li>
+            </ul>
             <ul class="side-menu">
                 <li>
                     <a href="html/coupon.html">
