--- a/html/event.html
+++ b/html/event.html
@@ -26,9 +26,9 @@
         <!-- // subHeader -->
         <!-- container -->
         <div id="container" class="event">
-            <article class="tab-menu">
-                <ul data-tabMenu>
-                    <li><a href="#"  class="on" data-tab="1">진행중인 이벤트</a></li>
+            <article class="tab-menu" data-tabMenu>
+                <ul>
+                    <li><a href="#" class="on" data-tab="1">진행중인 이벤트</a></li>
                     <li><a href="#" data-tab="2">종료된 이벤트</a></li>
                 </ul>
             </article>
